<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_report">

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.almer.testfrontend.ui.account.AccountFragment"
        android:label="@string/title_account" />
    <fragment
        android:id="@+id/navigation_report"
        android:name="com.almer.testfrontend.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.almer.testfrontend.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_target"
        android:name="com.almer.testfrontend.ui.target.TargetFragment"
        android:label="@string/title_target"
        tools:layout="@layout/fragment_target" />
    <fragment
        android:id="@+id/navigation_new"
        android:name="com.almer.testfrontend.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />
</navigation>